--- a/static/themes/openmanus/templates/chat.html
+++ b/static/themes/openmanus/templates/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenManus</title>
-    <link rel="stylesheet" href="/static/themes/Normal/static/style.css">
+    <link rel="stylesheet" href="/static/themes/openmanus/static/style.css">
     <!-- Add Font Awesome icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header-left">
             <a href="/" class="logo">
-                <img src="/static/logo.png" alt="OpenManus" class="logo-img">
+                <span class="logo-text">OpenManus</span>
             </a>
         </div>
         <div class="header-right">
@@ -54,7 +54,7 @@
                 <div class="welcome-message">
                     <!-- Add large logo animation -->
                     <div class="logo-animation">
-                        <img src="/static/themes/Normal/static/logo.png" alt="OpenManus Logo" class="welcome-logo">
+                        <img src="/static/themes/openmanus/static/logo.png" alt="OpenManus Logo" class="welcome-logo">
                     </div>
 
                     <p class="highlight-text">Your autonomous intelligent assistant</p>
@@ -87,6 +87,6 @@
         </div>
     </div>
 
-    <script src="/static/themes/Normal/static/main.js"></script>
+    <script src="/static/themes/openmanus/static/main.js"></script>
 </body>
 </html>
